# rust-graph-layouts

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  Taskfile.yml  shell.nix
.github/workflows/: test-and-benchmark.yml
backend/: Cargo.toml
backend/src/handlers/: mod.rs
backend/src/storage/: memory.rs  mod.rs  traits.rs
docs/cline/: layout_algorithm_template.md  plan.md
docs/sample/: business_graph.json  concentric_layout.json  dagre_layout.json  edge_list.csv  fcose_layout.json  knowledge_graph.dot  medicine_graph.json  medium_graph.json  node_list.csv  programming_graph.json  science_graph.json  tech_knowledge_graph.json  undirected_graph.dot
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  app_graph.rs  app_ui.rs  file_parser.rs  file_upload.rs  lib.rs  main.rs  utils.rs
frontend/src/layout/: mod.rs
frontend/src/layout/tests/: klay.rs
frontend/src/renderer/: mod.rs
frontend/src/ui/: app_impl.rs  app_utils.rs  global_options.rs  graph_operations.rs  graph_view.rs  interactions.rs  layout_options.rs  mod.rs  statistics.rs  view_controls.rs
mock-graph-generator/: Cargo.toml  README.md  domain_graph_utils.rs  generate_csv_graph.rs  generate_domain_graph.rs  generate_dot_graph.rs  generate_json_graph.rs  generate_large_graph.rs  generate_layout_graph.rs  generate_medicine_graph.rs  programming_graph.rs  run_generators.rs
shared/: Cargo.toml
shared/src/: api.rs  lib.rs  schema.rs  types.rs
shared/src/layout/: mod.rs  traits.rs
shared/src/layout/algorithms/: cise.rs  cose_bilkent.rs  dagre.rs  fcose.rs  klay.rs  mod.rs
src/: file_parsers.rs  lib.rs  types.rs
src/backend/src/: main.rs
src/backend/src/handlers/: file_parser.rs  graph.rs
src/benchmark/: mod.rs
src/frontend/src/layout/tests/: mod.rs
src/layout/: mod.rs
src/layout/algorithms/: cise.rs  concentric.rs  cose_bilkent.rs  dagre.rs  fcose.rs  fcose_test.rs  klay.rs  mod.rs  nforce.rs
