[package]
name = "rust-graph-layouts"
version = "0.1.0"
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
edition = "2021"
description = "A WebAssembly library for graph layout algorithms"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-graph-layouts"
path = "src/lib.rs"
required-features = ["cli"]

[features]
wee_alloc = ["dep:wee_alloc"]
cli = ["chrono"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = { version = "0.4.5", optional = true }
chrono = { version = "0.4", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
lto = true
