[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
egui = "0.22"
eframe = "0.22"  # EGUI framework for cross-platform support
egui_plot = { version = "0.26.0-alpha.2" }  # For plotting and visualization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"  # For random positions in layout algorithms
csv = "1.2"   # For parsing CSV files
rfd = "0.11"  # For native file dialogs

# For web support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "console",
    "Performance",
    "PerformanceTiming"
]}
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
